--- a/src/style.css
+++ b/src/style.css
@@ -45,5 +45,9 @@
             padding: 20px;
             border-left: 3px solid var(--clr-or);
         }
+        img {
+            max-width: none;
+            width: 100%;
+        }
     }
 }
